SERVER-60451 Copy BSON before saving and restoring a cursor around index build side table writes